# Statistical-Modeling-of-Time-Series-Data

./: .gitignore  README.md  STEP_BY_STEP_INSTRUCTIONS.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: unittests.yml
backend/: app.py  requirements.txt
frontend/: SETUP_GUIDE.md  package-lock.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: Dashboard.jsx  DateRangeFilter.jsx
notebooks/: Task_1_Foundation.ipynb  Task_2_ChangePointModeling.ipynb  Task_3_Dashboard.ipynb
src/: analysis.py  data_preparator_and_modeler.py  data_visualizer.py  documentation.py  event_compiler.py  loader.py
