[project]
name = "statistical-modeling-of-time-series-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arviz>=0.23.4",
    "ipykernel>=7.1.0",
    "jax>=0.9.0.1",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "numpyro>=0.20.0",
    "pandas>=3.0.0",
    "pymc>=5.27.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
]
